--- a/portfolio_origin/src/components/portfolio/portfolio.scss
+++ b/portfolio_origin/src/components/portfolio/portfolio.scss
@@ -1,49 +1,39 @@
 @import "../../style/global.scss";
+.portfolio {
+  margin-top: toRem(50);
+}
 .card {
-  border: 2px solid red !important;
   background-color: transparent !important;
   height: auto;
+  border-radius: 20px 20px 0 0 !important;
 }
-.card:nth-child(2) {
-  height: 15rem;
+.sam {
+  object-fit: contain;
+  border-radius: 20px;
+  margin-top: 20px;
 }
-
 .card-body {
   padding: unset !important;
   position: relative;
 }
-
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0);
-  transition: background 0.5s ease;
-}
-.btn-link {
-  position: absolute;
-  width: 500px;
-  left: 0;
-  top: 180px;
-  text-align: center;
-  opacity: 0;
-  transition: opacity 0.35s ease;
-  color: red;
-}
-.wom:hover + .overlay {
-  display: block;
-  background: rgba(0, 0, 0, 0.3);
+.card-body img {
+  border-radius: 20px 20px 0 0 !important  ;
 }
 .portfolio img {
-  object-fit: contain;
-  height: auto !important;
-
-  &:hover {
-    transform: scale(-50px);
-  }
+  object-fit: cover;
 }
-// .main_img {
-//     margin-left: 29%;
-// }
+.imgs_corners {
+  height: toRem(700) !important;
+  object-position: top;
+}
+.card-footer {
+  border: 1px solid gray;
+}
+.card-footer span {
+   background-color: rgba(255, 255, 255, 0.08);
+  // opacity: 0.7;
+  color: #color !important;
+  border: 1px solid black;
+  padding: 5px toRem(20);
+  border-radius: 50px;
+}
