--- a/portfolio_origin/src/components/portfolio/portfolio.scss
+++ b/portfolio_origin/src/components/portfolio/portfolio.scss
@@ -31,8 +31,7 @@
 }
 .card-footer span {
    background-color: rgba(255, 255, 255, 0.08);
-  // opacity: 0.7;
-  color: #color !important;
+    color: $colorYellow !important;
   border: 1px solid black;
   padding: 5px toRem(20);
   border-radius: 50px;
