--- a/portfolio_origin/src/components/portfolio/portfolio.scss
+++ b/portfolio_origin/src/components/portfolio/portfolio.scss
@@ -7,7 +7,7 @@
   object-fit: cover;
   overflow: hidden;
   object-position: top;
-  border-radius: 10px ;
+  border-radius: 10px 10px 0 0 ;
   overflow: hidden;
 }
 .card-footer {
@@ -43,4 +43,5 @@
   justify-content: center;
   display: flex;
   text-align: center;
+  align-items: center;
 }
