--- a/portfolio_origin/src/components/portfolio/portfolio.scss
+++ b/portfolio_origin/src/components/portfolio/portfolio.scss
@@ -7,7 +7,7 @@
   object-fit: cover;
   overflow: hidden;
   object-position: top;
-  border-radius: 10px 10px 0 0 ;
+  border-radius: 10px 10px 0 0;
   overflow: hidden;
 }
 .card-footer {
@@ -35,13 +35,19 @@
   justify-content: space-evenly;
 }
 .btn-yellow a {
-  width: 80px;
+  width: 84px;
   height: 12px;
   font-size: 12px;
-  font-weight: 700;
+  font-weight: 600;
   border-radius: 1px solid $colorYellow !important ;
   justify-content: center;
   display: flex;
   text-align: center;
   align-items: center;
+  text-decoration: none;
+  list-style: none;
+  color: #000;
+  &:hover {
+    color: #fff !important;
+  }
 }
