--- a/project_empty/src/components/HeadStarter/HeadStarter/HeadStarter.scss
+++ b/project_empty/src/components/HeadStarter/HeadStarter/HeadStarter.scss
@@ -67,7 +67,7 @@
     padding: unset !important;
   }
   .videoPlayer {
-    width: 80%;
+    width: 80% !important;
     height: toRem(581);
     object-fit: cover;
     margin: 0 10%;
