--- a/project_empty/src/layout/Navbar/Navbar.css
+++ b/project_empty/src/layout/Navbar/Navbar.css
@@ -29,6 +29,10 @@ a {
   top: -85px;
 }
 
+.notification .noti-logo {
+  border-radius: unset !important;
+}
+
 .crypto {
   position: absolute;
   left: 8rem;
