--- a/project_empty/src/layout/Navbar/Navbar.scss
+++ b/project_empty/src/layout/Navbar/Navbar.scss
@@ -22,6 +22,9 @@ a {
   position: relative;
   top: -85px;
 }
+ .notification .noti-logo {
+  border-radius: unset !important;
+}
 .crypto {
   position: absolute;
   left: 8rem;
