--- a/portfolio_origin/src/components/portfolio/portfolio.css
+++ b/portfolio_origin/src/components/portfolio/portfolio.css
@@ -73,4 +73,8 @@ body {
 }
 .btn-yellow a:hover {
   color: #fff !important;
+}
+
+.portfolio .col-5 .card_footer_txt {
+  justify-content: space-around;
 }/*# sourceMappingURL=portfolio.css.map */
