--- a/portfolio_origin/src/style/global.css
+++ b/portfolio_origin/src/style/global.css
@@ -11,4 +11,11 @@ body {
   height: 1000vh;
   font-family: "Inter", sans-serif !important;
   position: relative;
+}
+
+.line {
+  border: 1px solid rgb(69, 69, 69);
+  height: 2px;
+  width: 75%;
+  margin: auto;
 }/*# sourceMappingURL=global.css.map */
