--- a/portfolio_origin/src/components/block/block.css
+++ b/portfolio_origin/src/components/block/block.css
@@ -13,6 +13,13 @@ body {
   position: relative;
 }
 
+.line {
+  border: 1px solid rgb(69, 69, 69);
+  height: 2px;
+  width: 75%;
+  margin: auto;
+}
+
 .complete_icon {
   width: 64px;
   height: 64px;
