--- a/portfolio_origin/src/components/entering/entering.css
+++ b/portfolio_origin/src/components/entering/entering.css
@@ -13,6 +13,13 @@ body {
   position: relative;
 }
 
+.line {
+  border: 1px solid rgb(69, 69, 69);
+  height: 2px;
+  width: 75%;
+  margin: auto;
+}
+
 .entering {
   align-items: center;
   text-align: center;
