--- a/portfolio_origin/src/components/portfolio/portfolio.scss
+++ b/portfolio_origin/src/components/portfolio/portfolio.scss
@@ -32,7 +32,7 @@
 }
 .card_footer_txt {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 .card_footer_btns .btn-yellow {
   margin-left: unset !important;
