--- a/portfolio_origin/src/components/skills/skills.css
+++ b/portfolio_origin/src/components/skills/skills.css
@@ -21,11 +21,14 @@ body {
 }
 
 .skills_row {
-  margin-top: 11.25rem;
+  margin-top: 6.25rem;
 }
 .skills_row .col-xl-3:hover {
   transform: scale(1.1);
   transition: 0.5s;
+}
+.skills_row .line {
+  margin: 5.625rem auto;
 }
 
 .skills_txt {
