--- a/portfolio_origin/src/components/portfolio/portfolio.css
+++ b/portfolio_origin/src/components/portfolio/portfolio.css
@@ -64,7 +64,7 @@ body {
 
 .card_footer_txt {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .card_footer_btns .btn-yellow {
