--- a/portfolio_origin/src/layout/footer/footer.css
+++ b/portfolio_origin/src/layout/footer/footer.css
@@ -66,5 +66,5 @@ body {
   font-weight: 700;
   font-size: 1.375rem;
   line-height: 2rem;
-  color: #F5FBF2;
+  color: #f5fbf2;
 }/*# sourceMappingURL=footer.css.map */
