--- a/portfolio_origin/src/layout/footer/footer.scss
+++ b/portfolio_origin/src/layout/footer/footer.scss
@@ -42,5 +42,5 @@
   }
 }
 .title_footer {
-   @include text(toRem(145),2rem ,700,toRem(22),2rem,#F5FBF2)
+  @include text(toRem(145), 2rem, 700, toRem(22), 2rem, #f5fbf2);
 }
