--- a/portfolio_origin/src/components/portfolio/portfolio.css
+++ b/portfolio_origin/src/components/portfolio/portfolio.css
@@ -8,7 +8,7 @@
 body {
   background-color: #212529 !important;
   color: #fff !important;
-  height: 1000vh;
+  height: 100vh;
   font-family: "Inter", sans-serif !important;
   position: relative;
 }
@@ -79,10 +79,10 @@ body {
 }
 
 .btn-yellow a {
-  width: 84px;
+  width: 5.25rem;
   height: 12px;
   font-size: 12px;
-  font-weight: 600;
+  font-weight: 700;
   display: flex;
   justify-content: center;
   text-align: center;
