--- a/portfolio_origin/src/layout/footer/footer.css
+++ b/portfolio_origin/src/layout/footer/footer.css
@@ -22,6 +22,10 @@ body {
 
 .footer {
   margin-top: 7.5rem;
+  background-color: #1c1c1c;
+}
+.footer .row {
+  padding-top: 5rem;
 }
 .footer .row .col-3 .links {
   color: #7b7b7b;
@@ -40,10 +44,10 @@ body {
 .footer .row .col-3 .links a:hover {
   color: #d4d4d4;
 }
-.footer .row .col-2 {
+.footer .row .col-2:nth-child(1) {
   margin-left: 50px;
 }
-.footer .row .col-2 .title_footer {
+.footer .row .col-2:nth-child(1) .title_footer {
   width: 17.0625rem;
   height: 4.125rem;
   font-weight: 700;
@@ -51,7 +55,7 @@ body {
   line-height: 100%;
   color: #ffb742;
 }
-.footer .row .col-2 .parag_footer {
+.footer .row .col-2:nth-child(1) .parag_footer {
   width: 13.8125rem;
   height: 4.1875rem;
   font-weight: 600;
@@ -67,4 +71,13 @@ body {
   font-size: 1.375rem;
   line-height: 2rem;
   color: #f5fbf2;
+}
+
+.input_txt {
+  width: 16.9375rem;
+  height: 4.5625rem;
+  font-weight: 500;
+  font-size: 1.1rem;
+  line-height: 2.25rem;
+  color: #7b7b7b;
 }/*# sourceMappingURL=footer.css.map */
