--- a/portfolio_origin/src/components/portfolio/portfolio.scss
+++ b/portfolio_origin/src/components/portfolio/portfolio.scss
@@ -47,7 +47,7 @@
   width: toRem(84);
   height: 12px;
   font-size: 12px;
-  font-weight: 700;
+  font-weight: 700 !important;
   display: flex;
   justify-content: center;
   text-align: center;
