--- a/portfolio_origin/src/components/portfolio/portfolio.css
+++ b/portfolio_origin/src/components/portfolio/portfolio.css
@@ -82,7 +82,7 @@ body {
   width: 5.25rem;
   height: 12px;
   font-size: 12px;
-  font-weight: 700;
+  font-weight: 700 !important;
   display: flex;
   justify-content: center;
   text-align: center;
