--- a/portfolio_origin/src/layout/footer/footer.css
+++ b/portfolio_origin/src/layout/footer/footer.css
@@ -44,9 +44,6 @@ body {
 .footer .row .col-3 .links a:hover {
   color: #d4d4d4;
 }
-.footer .row .col-2:nth-child(1) {
-  margin-left: 50px;
-}
 .footer .row .col-2:nth-child(1) .title_footer {
   width: 17.0625rem;
   height: 4.125rem;
@@ -74,10 +71,64 @@ body {
 }
 
 .input_txt {
-  width: 16.9375rem;
+  width: 13.1875rem;
   height: 4.5625rem;
   font-weight: 500;
   font-size: 1.1rem;
   line-height: 2.25rem;
   color: #7b7b7b;
+}
+
+.footer_input {
+  position: relative;
+  width: 15.625rem;
+  height: 3.9375rem;
+  border: unset;
+  border-radius: 3.0625rem;
+  background: #212529;
+  outline: none;
+  padding: 1rem 25px;
+  margin-left: -10px;
+}
+.footer_input::-moz-placeholder {
+  width: 12.5rem;
+  height: 1.5rem;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.4375rem;
+  color: #7b7b7b;
+}
+.footer_input:-ms-input-placeholder {
+  width: 12.5rem;
+  height: 1.5rem;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.4375rem;
+  color: #7b7b7b;
+}
+.footer_input::placeholder {
+  width: 12.5rem;
+  height: 1.5rem;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.4375rem;
+  color: #7b7b7b;
+}
+
+.input {
+  position: relative;
+}
+
+.input_submit {
+  background-color: transparent;
+  border: unset;
+}
+
+.icon_send {
+  position: relative;
+  margin-left: -55px;
+  background-color: #ffb742;
+  border-radius: 50%;
+  padding: 1.4375rem;
+  cursor: pointer;
 }/*# sourceMappingURL=footer.css.map */
