--- a/portfolio_origin/src/layout/footer/footer.scss
+++ b/portfolio_origin/src/layout/footer/footer.scss
@@ -26,7 +26,7 @@
     }
 
     .col-2:nth-child(1) {
-      margin-left: 50px;
+      // margin-left: 50px;
       .title_footer {
         @include text(
           toRem(273),
@@ -47,5 +47,36 @@
   @include text(toRem(145), 2rem, 700, toRem(22), 2rem, #f5fbf2);
 }
 .input_txt {
-  @include text(toRem(271), toRem(73), 500, 1.1rem, toRem(36), $colorGray);
+  @include text(toRem(211), toRem(73), 500, 1.1rem, toRem(36), $colorGray);
+}
+.footer_input {
+  position: relative;
+  width: toRem(250);
+  height: toRem(63);
+  border: unset;
+  border-radius: toRem(49);
+  background: #212529;
+  outline: none;
+  padding: 1rem 25px;
+  margin-left: -10px;
+  &::placeholder {
+    @include text(toRem(200), toRem(24), 400, 1rem, toRem(23), $colorGray);
+  }
+}
+
+.input {
+  position: relative;
+}
+.input_submit {
+  background-color: transparent;
+  border: unset;
+}
+
+.icon_send {
+  position: relative;
+  margin-left: -55px;
+  background-color: $colorYellow;
+  border-radius: 50%;
+  padding: toRem(23);
+  cursor: pointer;
 }
