--- a/portfolio_origin/src/layout/footer/footer.css
+++ b/portfolio_origin/src/layout/footer/footer.css
@@ -125,10 +125,12 @@ body {
 }
 
 .icon_send {
+  margin-top: -5px;
   position: relative;
-  margin-left: -55px;
+  margin-left: -1.5625rem;
   background-color: #ffb742;
-  border-radius: 50%;
-  padding: 1.4375rem;
+  border-radius: 0 10px 10px 0;
+  padding: 1.25rem;
   cursor: pointer;
+  overflow: hidden;
 }/*# sourceMappingURL=footer.css.map */
