--- a/portfolio_origin/src/layout/footer/footer.css
+++ b/portfolio_origin/src/layout/footer/footer.css
@@ -27,24 +27,24 @@ body {
 .footer .row {
   padding-top: 5rem;
 }
-.footer .row .col-3 .links {
+.footer .row .col-xl-3 .links {
   color: #7b7b7b;
   font-weight: 500;
   font-size: 17.9888px;
   line-height: 36px;
   cursor: pointer;
 }
-.footer .row .col-3 .links:hover {
+.footer .row .col-xl-3 .links:hover {
   color: #d4d4d4;
 }
-.footer .row .col-3 .links a {
+.footer .row .col-xl-3 .links a {
   text-decoration: none;
   color: #7b7b7b;
 }
-.footer .row .col-3 .links a:hover {
+.footer .row .col-xl-3 .links a:hover {
   color: #d4d4d4;
 }
-.footer .row .col-2:nth-child(1) .title_footer {
+.footer .row .col-xl-2:nth-child(1) .title_footer {
   width: 17.0625rem;
   height: 4.125rem;
   font-weight: 700;
@@ -52,7 +52,7 @@ body {
   line-height: 100%;
   color: #ffb742;
 }
-.footer .row .col-2:nth-child(1) .parag_footer {
+.footer .row .col-xl-2:nth-child(1) .parag_footer {
   width: 13.8125rem;
   height: 4.1875rem;
   font-weight: 600;
@@ -84,7 +84,7 @@ body {
   width: 15.625rem;
   height: 3.9375rem;
   border: unset;
-  border-radius: 3.0625rem;
+  border-radius: 3.0625rem 0 0 3.0625rem;
   background: #212529;
   outline: none;
   padding: 1rem 25px;
@@ -133,4 +133,16 @@ body {
   padding: 1.25rem;
   cursor: pointer;
   overflow: hidden;
+}
+
+@media screen and (max-width: 500px) {
+  .title_footer,
+.parag_footer {
+    width: 80%;
+    margin: auto;
+  }
+
+  .input_txt {
+    width: 100%;
+  }
 }/*# sourceMappingURL=footer.css.map */
