--- a/portfolio_origin/src/layout/footer/footer.scss
+++ b/portfolio_origin/src/layout/footer/footer.scss
@@ -82,6 +82,12 @@
   overflow: hidden;
 }
 @media screen and(max-width:500px) {
+  .footer .row {
+    padding: 1rem;
+  }
+  .title_links {
+    margin-top: 1rem;
+  }
   .title_footer,
   .parag_footer {
     width: 80%;
@@ -89,5 +95,11 @@
   }
   .input_txt {
     width: 100%;
+    height: toRem(31);
+    margin-bottom: 5%;
+    font-size: 14px;
+  }
+  .footer_input {
+    width: 80% !important;
   }
 }
