--- a/portfolio_origin/src/layout/footer/footer.scss
+++ b/portfolio_origin/src/layout/footer/footer.scss
@@ -48,6 +48,9 @@
 .input_txt {
   @include text(toRem(211), toRem(73), 500, 1.1rem, toRem(36), $colorGray);
 }
+.table_2 {
+ margin-left: toRem(82);
+}
 .footer_input {
   position: relative;
   width: toRem(250);
