--- a/portfolio_origin/src/layout/navbar/Navbar.css
+++ b/portfolio_origin/src/layout/navbar/Navbar.css
@@ -128,7 +128,7 @@ body {
     text-align: left;
   }
 
-  .btn-yellow {
-    display: none;
+  .btn_navbar {
+    display: none !important;
   }
 }/*# sourceMappingURL=Navbar.css.map */
