--- a/portfolio_origin/src/layout/navbar/Navbar.scss
+++ b/portfolio_origin/src/layout/navbar/Navbar.scss
@@ -99,4 +99,8 @@
   .btn_navbar {
     display: none !important;
   }
+  .dropdown-menu-dark {
+    background-color: transparent !important;
+    border: unset !important;
+  }
 }
