--- a/portfolio_origin/src/components/skills/skills.css
+++ b/portfolio_origin/src/components/skills/skills.css
@@ -108,4 +108,8 @@ body {
   #row_of_skills {
     padding: 1.2rem !important;
   }
+
+  .skills_btn {
+    display: none;
+  }
 }/*# sourceMappingURL=skills.css.map */
