--- a/portfolio_origin/src/layout/navbar/Navbar.css
+++ b/portfolio_origin/src/layout/navbar/Navbar.css
@@ -131,4 +131,9 @@ body {
   .btn_navbar {
     display: none !important;
   }
+
+  .dropdown-menu-dark {
+    background-color: transparent !important;
+    border: unset !important;
+  }
 }/*# sourceMappingURL=Navbar.css.map */
