--- a/portfolio_origin/src/components/aboutMe/aboutMe.scss
+++ b/portfolio_origin/src/components/aboutMe/aboutMe.scss
@@ -9,7 +9,7 @@
   border-radius: 50px;
   color: $colorYellow;
   font-weight: bold;
-  margin-top: toRem(100);
+  margin-top: 8rem;
   margin-bottom: 1.5rem;
 }
 .aboutMe_txt {
