--- a/portfolio_origin/src/layout/footer/footer.scss
+++ b/portfolio_origin/src/layout/footer/footer.scss
@@ -109,7 +109,7 @@
     width: 80% !important;
   }
   .table_2 {
-    margin-left: unset;
+    margin-left: unset !important;
   }
   .footer_title_name {
     margin-left: unset;
