--- a/nextjs-app/styles/globals.css
+++ b/nextjs-app/styles/globals.css
@@ -4,8 +4,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    background-color: #161616;
-    color: #fff ;
+  background-color: #161616;
+  color: #fff;
 }
 
 a {
@@ -15,4 +15,16 @@ a {
 
 * {
   box-sizing: border-box;
+}
+.navbar,
+footer {
+  display: block;
+  font-size: 1.5rem;
+  background-color: #fff;
+  border-radius: 10px;
+  width: 150px;
+  height: 35px;
+  color: #161616;
+  margin: auto;
+  text-align: center;
 }
