--- a/nextjs-app/styles/globals.css
+++ b/nextjs-app/styles/globals.css
@@ -5,12 +5,10 @@ body {
 }
 
 body {
-
-font-family: 'Work Sans', sans-serif;
+  font-family: "Montserrat", sans-serif;
   background: linear-gradient(to bottom, #4e54c8, #8f94fb);
   color: #fff;
   font-size: 20px;
-  font-weight: 600;
 }
 
 #__next {
@@ -29,22 +27,14 @@ footer {
 }
 
 header {
-  background-image: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 0.7),
-    rgba(0, 0, 0, 0.5)
-  );
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5));
   display: flex;
   align-items: center;
   padding: 0 20px;
 }
 
 footer {
-  background-image: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 0.7),
-    rgba(0, 0, 0, 0.5)
-  );
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5));
   text-align: center;
   font-size: 12px;
   display: flex;
@@ -56,5 +46,6 @@ footer {
 a {
   color: #fff;
   text-decoration: none;
-  cursor:grab ;
-}
+  cursor: -webkit-grab;
+  cursor: grab;
+}/*# sourceMappingURL=globals.css.map */
