--- a/nextjs-app/styles/globals.scss
+++ b/nextjs-app/styles/globals.scss
@@ -5,8 +5,7 @@ body {
 }
 
 body {
-
-font-family: 'Work Sans', sans-serif;
+  font-family: "Work Sans", sans-serif;
   background: linear-gradient(to bottom, #4e54c8, #8f94fb);
   color: #fff;
   font-size: 20px;
@@ -56,5 +55,5 @@ footer {
 a {
   color: #fff;
   text-decoration: none;
-  cursor:grab ;
+  cursor: grab;
 }
