--- a/gamestore/src/index.scss
+++ b/gamestore/src/index.scss
@@ -4,7 +4,10 @@
 }
 body {
   background-color: rgb(25, 26, 28);
+  font-family: Didact Gothic;
+  font-weight: normal;
 }
+
 .App {
   max-width: 1180px;
   margin: 0 auto;
