--- a/gamestore/src/components/cartBlog/cartBlog.scss
+++ b/gamestore/src/components/cartBlog/cartBlog.scss
@@ -1,6 +1,16 @@
+@import "../../index.scss";
 .cardBlock {
-    display: flex;
-    align-items: center;
-    // justify-content: center;
-    position: relative;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+.cartBlock_price {
+  margin-left: rem(15);
+  font-size: rem(18);
+  font-weight: bold;
+}
+
+.cartBlock_icon {
+  cursor: pointer;
+  position: relative;
 }
