--- a/gamestore/src/components/gameItem/gameItem.scss
+++ b/gamestore/src/components/gameItem/gameItem.scss
@@ -29,8 +29,8 @@
   font-size: rem(14);
 }
 .gameItemBtn {
-  position: relative;
-  top: rem(10);
-  right: 0;
-  bottom: 0;
+  position: absolute;
+  // top: rem(10);
+  right: 0.5rem;
+  bottom: 0.5rem;
 }
