--- a/gamestore/src/components/cartMenu/cartMenu.scss
+++ b/gamestore/src/components/cartMenu/cartMenu.scss
@@ -1,1 +1,24 @@
-@import '../../index.scss';
+@import "../../index.scss";
+
+.cartMenu {
+  position: absolute;
+  top: rem(30);
+  left: -300px;
+  background-color: rgb(36, 37, 41);
+  width: rem(400);
+  padding: rem(10) rem(20);
+  z-index: 2;
+  border-radius: rem(15);
+}
+
+.cartMenuArrange {
+  margin-top: rem(20);
+  padding: rem(20) 0;
+  border-top: 1px solid rgba(255, 255, 255, 0.4);
+}
+
+.cartMenuTotalPrice {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 0.9rem;
+}
