--- a/gamestore/src/components/button/button.scss
+++ b/gamestore/src/components/button/button.scss
@@ -11,6 +11,8 @@
 }
 .btn--secondary {
   background-color: rgb(80, 82, 84);
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: #fff;
 }
 .btn--small {
   font-size: 14px;
