--- a/gamestore/src/components/gameBuy/gameBuy.scss
+++ b/gamestore/src/components/gameBuy/gameBuy.scss
@@ -1,5 +1,9 @@
 @import "../../index.scss";
 .gameBuy_price {
-    margin-right: 5px;
-
+  margin-right: 5px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+.moveIntoCart {
+    font-weight: 500;
+    color: white;
 }
