--- a/gamestore/src/components/orderPage/orderPage.scss
+++ b/gamestore/src/components/orderPage/orderPage.scss
@@ -1,1 +1,14 @@
-@import '../../index.scss';
+@import "../../index.scss";
+.orderPageLink {
+  border: none;
+  border-radius: rem(50);
+  padding: rem(13) rem(10);
+  color: #ffffff;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-weight: 500;
+  line-height: rem(25);
+  font-size: rem(21);
+  background-color: #5558ed;
+  display: inline-block;
+  margin-top: 10rem;
+}
