--- a/gamestore/src/components/gameItem/gameItem.scss
+++ b/gamestore/src/components/gameItem/gameItem.scss
@@ -9,6 +9,7 @@
   border-radius: rem(15);
   cursor: pointer;
   position: relative;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 .gameItem:not(:last-child) {
   margin-bottom: rem(30);
