--- a/gamestore/src/components/cartBlog/cartBlog.scss
+++ b/gamestore/src/components/cartBlog/cartBlog.scss
@@ -5,6 +5,7 @@
   position: relative;
 }
 .cartBlock_price {
+  position: relative;
   margin-left: rem(15);
   font-size: rem(18);
   font-weight: bold;
