--- a/gamestore/src/components/cartMenu/cartMenu.scss
+++ b/gamestore/src/components/cartMenu/cartMenu.scss
@@ -30,6 +30,7 @@
   .cartMenu {
     width: rem(350) !important;
     top: 2rem !important;
-    left: rem(-287) !important;
+    left: rem(-287) !important; 
+    font-size: 1rem;
   }
 }
