--- a/gamestore/src/components/gameCover/gameCover.scss
+++ b/gamestore/src/components/gameCover/gameCover.scss
@@ -4,6 +4,8 @@
   width: 100%;
   background-size: cover;
   background-position: center;
-  border-top-left-radius: rem(15);
-  border-top-right-radius: rem(15);
+  border-top-left-radius: rem(15) !important;
+  border-top-right-radius: rem(15) !important;
 }
+
+
