--- a/gamestore/src/components/orderItem/orderItem.scss
+++ b/gamestore/src/components/orderItem/orderItem.scss
@@ -2,6 +2,7 @@
 
 .orderItem {
   display: flex;
+
   margin-bottom: rem(30);
 }
 .orderItemCover {
@@ -16,4 +17,20 @@
   font-size: rem(24);
   font-weight: bold;
   margin-left: auto;
+}
+
+@media screen and(max-width:$small) {
+  .orderItemCover {
+    width: 11rem;
+  }
+  .orderItemTitle {
+    font-size: 1rem;
+    max-width: 120px;
+  }
+  .orderItemPrice {
+    font-size: 1rem;
+  }
+  .cartItemDeleteIcon {
+    margin-top: 0.5rem;
+  }
 }
