--- a/gamestore/src/components/orderPage/orderPage.scss
+++ b/gamestore/src/components/orderPage/orderPage.scss
@@ -12,3 +12,8 @@
   display: inline-block;
   margin-top: 10rem;
 }
+// @media screen and(max-width:500px) {
+//  .orderPageRight {
+//   display: flex;
+//  }
+// }
