--- a/tesla-clone/styles/globals.css
+++ b/tesla-clone/styles/globals.css
@@ -1,12 +1,13 @@
-html,
-body {
-  box-sizing: border-box;
-
+* {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  box-sizing: border-box;
 }
+
+/* html,
+body {
+  display: auto !important;
+} */
 
 a {
   color: inherit;
