--- a/tesla-clone/layout/Navbar/navbar.module.scss
+++ b/tesla-clone/layout/Navbar/navbar.module.scss
@@ -8,8 +8,9 @@
   padding: 0 rem(2);
   position: fixed;
   top: 0;
-  left: 0;
+  left: rem(50);
   width: 100%;
+  
 }
 .teslaLogo {
   margin-right: rem(35);
