--- a/tesla-clone/components/Header/header.module.scss
+++ b/tesla-clone/components/Header/header.module.scss
@@ -8,6 +8,14 @@
   display: grid;
   place-items: center;
 }
+.section:nth-child(3) {
+  background: url("../../public/images/model-y.jpg") no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  // display: grid;
+  // place-items: center;
+}
 .textArea {
   text-align: center;
   margin-top: rem(70);
@@ -34,6 +42,7 @@
 .headerButtons {
   display: flex !important;
   flex-direction: column;
+  margin-top: rem(170);
 }
 
 .btnMain {
@@ -58,4 +67,24 @@
   background-color: #ffffff;
   color: #171a20cc;
   margin-left: rem(20);
+  cursor: pointer;
+}
+.downIcon {
+  animation: iconDownAnimate 1.5s ease 0s infinite normal none running;
+  -webkit-animation: iconDownAnimate 1.5s ease 0s infinite normal none running;
+}
+@keyframes iconDownAnimate {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(5px);
+  }
+  60% {
+    transform: translateY(3px);
+  }
 }
