--- a/tesla-clone/styles/globals.css
+++ b/tesla-clone/styles/globals.css
@@ -1,15 +1,41 @@
 * {
-  padding: 0;
-  margin: 0;
   box-sizing: border-box;
 }
 
-/* html,
+html,
 body {
-  display: auto !important;
-} */
+  padding: 0;
+  margin: 0;
+}
 
 a {
   color: inherit;
   text-decoration: none;
+}
+.fadeInUp {
+  animation: fadeInUp 3s ease;
+}
+
+.fadeInUpForBtns {
+  animation: fadeInUpForBtns 2s ease;
+}
+@keyframes fadeInUp {
+  from {
+    transform: translateY(40px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes fadeInUpForBtns {
+  from {
+    transform: translateY(100px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
