--- a/tesla-clone/layout/Navbar/navbar.module.scss
+++ b/tesla-clone/layout/Navbar/navbar.module.scss
@@ -1,5 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Anton&family=Didact+Gothic&family=Inter&family=Lato:ital,wght@1,100&family=Poppins&family=Righteous&family=Work+Sans:ital,wght@1,200;1,900&display=swap");
 @import "../../styles/_rediractes";
+
+.active {
+  border: 2px solid red;
+}
+.showMenu {
+ background-color: #171a20;
+ color: #fff;
+ position: absolute;
+ right: 10rem;
+ top: 0;
+}
+.closeIcon {
+  cursor: pointer;
+}
+.closeMenu {
+  display: none;
+}
 .navbar {
   display: flex;
   justify-content: space-around;
@@ -10,7 +27,6 @@
   top: 0;
   left: rem(50);
   width: 100%;
-  
 }
 .teslaLogo {
   margin-right: rem(35);
