--- a/tesla-clone/layout/Navbar/navbar.module.scss
+++ b/tesla-clone/layout/Navbar/navbar.module.scss
@@ -1,22 +1,51 @@
 @import url("https://fonts.googleapis.com/css2?family=Anton&family=Didact+Gothic&family=Inter&family=Lato:ital,wght@1,100&family=Poppins&family=Righteous&family=Work+Sans:ital,wght@1,200;1,900&display=swap");
 @import "../../styles/_rediractes";
 
-.active {
-  border: 2px solid red;
+.sideMenu {
+  position: fixed;
+  width: rem(300);
+  height: 100vh;
+  right: -100%;
+  display: flex;
+  top: 0;
+  flex-direction: column;
+  background-color: #fff;
+  padding: rem(20);
+  opacity: 0.8;
+  transition: 800ms;
 }
-.showMenu {
- background-color: #171a20;
- color: #fff;
- position: absolute;
- right: 10rem;
- top: 0;
+.sideMenu.active {
+  right: 0;
+  transition: 950ms;
+  -webkit-transition: 950ms;
+  box-shadow: rgba(99, 99, 99, 0.2) 0 2px 8px 0;
 }
 .closeIcon {
   cursor: pointer;
+  color: #171a20;
+  align-self: end;
+  transition: 0.5s ease;
+  &:hover {
+    transform: rotate(170deg);
+  }
 }
-.closeMenu {
-  display: none;
+.hamburgerLinks {
+  cursor: pointer;
+  list-style: none;
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  font-weight:bold;
+  line-height: rem(24);
+  padding: 15px;
+  text-align: start;
+  transition: 0.5 ease;
+  -webkit-transition: 0.5 ease;
+  border-radius: 0.5em;
+  &:hover {
+    background-color: #b3b7bd48;
+  }
 }
+
 .navbar {
   display: flex;
   justify-content: space-around;
@@ -37,6 +66,7 @@
 .menu {
   display: flex;
   gap: 5px;
+  padding-left: unset;
   .items {
     font-family: "Poppins", sans-serif;
     list-style-type: none;
@@ -54,4 +84,7 @@
 }
 .items > .itemsLink {
   color: #171a20;
+}
+.sideBarNav {
+  padding-left: unset;
 }
