--- a/gamestore/src/components/cartItem/cartItem.scss
+++ b/gamestore/src/components/cartItem/cartItem.scss
@@ -23,8 +23,11 @@
 @media screen and(max-width: $small) {
   .cartItem {
     font-size: 1rem;
-   .btn--medium {
-    font-size: 1rem;
-   }
+    span {
+      max-width: 218px !important;
+    }
+    .btn--medium {
+      font-size: 1rem;
+    }
   }
 }
