--- a/tesla-clone/layout/Navbar/navbar.module.scss
+++ b/tesla-clone/layout/Navbar/navbar.module.scss
@@ -34,7 +34,7 @@
   list-style: none;
   font-family: "Poppins", sans-serif;
   font-size: 18px;
-  font-weight:bold;
+  font-weight: bold;
   line-height: rem(24);
   padding: 15px;
   text-align: start;
@@ -54,8 +54,7 @@
   padding: 0 rem(2);
   position: fixed;
   top: 0;
-  left: rem(50);
-  width: 100%;
+  width: 100vw;
 }
 .teslaLogo {
   margin-right: rem(35);
