style was changed

--- a/tesla-clone/components/Header/header.module.scss
+++ b/tesla-clone/components/Header/header.module.scss
@@ -109,3 +109,9 @@
     transform: translateY(3px);
   }
 }
+@media screen and (max-width: 330px) {
+  // .btnMain {
+  //   display: inline-block !important;
+  //   padding: rem(100) 0.9rem 0;
+  // }
+}
